started implementing hashing and salting passwords